# Orea

./: .gitignore  README.md  libtest.py  requirements.txt  rogue.scr
CLI/: LogController.py  main.py
UI/: Qlogs.py  main.py  treelogs.py
html/orea/: filtering.html  index.html  logcontroller.html  loglib.html  orea_core.html
html/orea/cursed/: index.html  mainwin.html  subwins.html
logic/: filtering.py  loglib.py
orea/: __main__.py  filtering.py  logcontroller.py  loglib.py  rogue.scr  testing.py
orea/cursed/: mainwin.py  subwins.py
orea_core/: Cargo.toml
orea_core/src/: globals.rs  lib.rs  reader.rs
r_orea/: Cargo.toml
r_orea/src/: lib.rs  main.rs  reader.rs
tests/: profile.prof  profile2.prof  random_yaml_generation.py  write_test.py
tests/moby/: .moby1.yaml.kate-swp
