[package]
name = "orea_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "orea_core"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "^0.4"
chrono = "^0.4"
rand = "^0.8"

[dependencies.pyo3]
version = "^0.17"
features = ["extension-module"]
